--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "js13kserver",
+  "name": "js13kentry2018",
   "version": "1.0.2",
   "description": "js13kgames game jam server",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "precommit": "pretty-quick --staged",
+    "build": "gulp compress",
     "start": "node index.js",
     "test": "mocha test"
   },
@@ -20,9 +22,14 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.0",
     "express-session": "^1.15.6",
+    "gulp": "^3.9.1",
+    "gulp-butternut": "^1.0.0",
+    "gulp-htmlmin": "^4.0.0",
     "mysql2": "^1.5.3",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "prettier": "^1.14.2",
+    "pump": "^3.0.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.0",
     "sqlite3": "^4.0.1"
