--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "js13kentry2018",
-  "version": "1.0.2",
-  "description": "js13kgames game jam server",
-  "license": "MIT",
-  "main": "index.js",
-  "scripts": {
-    "precommit": "pretty-quick --staged",
-    "build": "gulp compress",
-    "start": "node index.js",
-    "test": "mocha test"
-  },
-  "keywords": [
-    "js13kgames",
-    "server"
-  ],
-  "engines": {
-    "node": "8.*"
-  },
-  "dependencies": {
-    "archiver": "^2.1.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.0",
-    "express-session": "^1.15.6",
-    "mysql2": "^1.5.3",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
-    "prettier": "^1.14.2",
-    "sequelize": "^4.38.0",
-    "socket.io": "^2.1.0",
-    "sqlite3": "^4.0.1"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-butternut": "^1.0.0",
-    "gulp-htmlmin": "^4.0.0",
-    "husky": "^0.14.3",
-    "mocha": "^5.2.0",
-    "pump": "^3.0.0"
-  }
+    "name": "js13kentry2018",
+    "version": "1.0.2",
+    "description": "js13kgames game jam server",
+    "license": "MIT",
+    "main": "index.js",
+    "scripts": {
+        "precommit": "pretty-quick --staged",
+        "build": "gulp compress",
+        "start": "node index.js",
+        "test": "mocha test"
+    },
+    "keywords": [
+        "js13kgames",
+        "server"
+    ],
+    "engines": {
+        "node": "8.*"
+    },
+    "dependencies": {
+        "archiver": "^2.1.1",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.0",
+        "express-session": "^1.15.6",
+        "mysql2": "^1.5.3",
+        "pg": "^7.4.3",
+        "pg-hstore": "^2.3.2",
+        "prettier": "^1.14.2",
+        "pretty-quick": "^1.6.0",
+        "sequelize": "^4.38.0",
+        "socket.io": "^2.1.0",
+        "sqlite3": "^4.0.1"
+    },
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-butternut": "^1.0.0",
+        "gulp-htmlmin": "^4.0.0",
+        "husky": "^0.14.3",
+        "mocha": "^5.2.0",
+        "pump": "^3.0.0"
+    }
 }
