--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": "index.js",
     "scripts": {
         "precommit": "pretty-quick --staged",
-        "build": "gulp compress",
+        "build": "gulp copy",
+        "prod": "gulp compress",
         "start": "node index.js",
         "test": "mocha test"
     },
